# stam-rust

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  codemeta-harvest.json
.github/workflows/: stam.yml
benches/: benchmarks.rs  common
bindings/python/: Cargo.toml  Makefile  README.md  pyproject.toml  test.py
bindings/python/src/: annotation.rs  annotationdata.rs  annotationdataset.rs  annotationstore.rs  error.rs  lib.rs  resources.rs  selector.rs
src/: annotation.rs  annotationdata.rs  annotationdataset.rs  annotationstore.rs  api.rs  cbor.rs  config.rs  csv.rs  datakey.rs  datavalue.rs  error.rs  file.rs  json.rs  lib.rs  parser.rs  query.rs  resources.rs  search.rs  selector.rs  store.rs  substore.rs  tests.rs  text.rs  textsearch.rs  textselection.rs  textvalidation.rs  types.rs
src/api/: annotation.rs  annotationdata.rs  annotationdataset.rs  annotationstore.rs  datakey.rs  query.rs  resources.rs  substore.rs  text.rs  textselection.rs  translate.rs  transpose.rs  webanno.rs
tests/: api.rs  hello.txt  includetest.store.stam.json  lowlevel.rs  oldtest.store.stam.csv  singletest.store.stam.json  test.annotations.stam.csv  test.annotationset.stam.csv  test.annotationset.stam.json  test.store.stam.csv  test.store.stam.json  tests.rs
tests/common/: mod.rs
