[package]
name = "stam"
version = "0.12.0"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "STAM is a powerful library for dealing with stand-off annotations on text"
documentation = "https://docs.rs/stam"
homepage = "https://github.com/annotation/stam"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/annotation/stam-rust"
keywords = [ "text-processing", "annotation", "linguistics", "standoff", "nlp"]

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
sealed = "0.5.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_path_to_error = "0.1.15"
smallvec = { version = "1.13.1", features = ["union"] }
regex = "1.10.3"
nanoid = "0.4.0"
csv = "1.3.0"
datasize = { version = "0.2.15", features = ["smallvec-types"] }
minicbor = { version = "0.21.0", features = ["derive","std" ] }
rayon = "1.9.0"

[features]
default = ["csv","webanno","transpose"]
csv = []
webanno = []
transpose = []

[dev-dependencies]
criterion = "0.4.0"


[[bench]]
harness = false
path = "benches/benchmarks.rs"
name = "benchmarks"

