[package]
name = "stam"
version = "0.18.0"
edition = "2021"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "STAM is a powerful library for dealing with stand-off annotations on text. This is the Rust library."
documentation = "https://docs.rs/stam"
homepage = "https://github.com/annotation/stam"
include = ["src/**/*","tests/**/*", "LICENSE", "README.md"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/annotation/stam-rust"
keywords = [ "text-processing", "annotation", "linguistics", "standoff", "nlp"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
sealed = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_path_to_error = "0.1.17"
smallvec = { version = "1.15.1", features = ["union"] }
regex = "1.11.2"
nanoid = "0.4.0"
csv = "1.3.1"
datasize = { version = "0.2.15", features = ["smallvec-types"] }
minicbor = { version = "2.1.1", features = ["derive","std" ] }
rayon = "1.11.0"
sha1 = "0.10.6"
base16ct = { version = "0.3.0", features = ["alloc"] }

[features]
default = ["csv","webanno","transpose", "translate","textvalidation"]
csv = []
webanno = []
transpose = []
translate = ["transpose"]
textvalidation = []

[dev-dependencies]
criterion = "0.4.0"


[[bench]]
harness = false
path = "benches/benchmarks.rs"
name = "benchmarks"

